--- a/stemkat/report/index.html
+++ b/stemkat/report/index.html
@@ -28,6 +28,6 @@
     <!-- JS Scripts -->
     <script src="https://cdn.jsdelivr.net/npm/interactjs@1.3.4/dist/interact.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    <script src="stemkat/report/src/download.js"></script>
+    <script src="src/download.js"></script>
   </body>
 </html>
