Remove useless download button

--- a/clv/report/index.html
+++ b/clv/report/index.html
@@ -18,9 +18,9 @@
       <br>
       <a href="mailto:jonathan.sanderson@northumbria.ac.uk">jonathan.sanderson@northumbria.ac.uk</a>    
     </p>
-    <p>Click on the links below to download the data:</p>
+    <p>Click on the button below to download the data:</p>
     <p>
-			<button class="M" type="button" disabled>MLM/S</button>
+			<!-- <button class="M" type="button" disabled>MLM/S</button> -->
 			<button class="S" type="button">SKAT</button>
     </p>
 	</div> <!-- download-files -->
